--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,10 @@
-Brlapi==0.6.1
-CDApplet==1.0
-CDBashApplet==1.0
 Django==1.6.5
-GnuPGInterface==0.3.2
-Mako==0.9.1
-Markdown==2.4.1
-MarkupSafe==0.18
-PAM==0.4.2
-Pillow==2.3.0
-SecretStorage==2.0.0
-Twisted-Core==13.2.0
-Twisted-Names==13.2.0
-Twisted-Web==13.2.0
-Unidecode==0.04.14
-adium-theme-ubuntu==0.3.4
-apt-xapian-index==0.45
+Flask==0.10.1
+Jinja2==2.7.3
+MarkupSafe==0.23
+Werkzeug==0.9.6
 argparse==1.2.1
-calendar-indicator==0.3.1
-ccsm==0.9.11.2
-chardet==2.0.1
-colorama==0.2.5
-command-not-found==0.3
-compizconfig-python==0.9.11.2
-configglue==1.1.2
-debtagshw==0.1
-defer==1.0.6
-dirspec==13.10
-django-filter==0.7
 djangorestframework==2.3.14
-dnspython==1.11.1
-dulwich==0.9.4
-duplicity==0.6.23
-fastimport==0.9.2
-html5lib==0.999
-httplib2==0.8
-indicator-weather==11.05.31
-keyring==3.5
-launchpadlib==1.10.2
-lazr.restfulclient==0.13.3
-lazr.uri==1.0.3
-lockfile==0.8
-louis==2.5.3
-lxml==3.3.3
-mysql-connector-python==1.1.6
-oauth==1.0.1
-oauthlib==0.6.1
-oneconf==0.3.7
-paramiko==1.10.1
-pexpect==3.1
-piston-mini-client==0.7.5
-protobuf==2.5.0
-pyOpenSSL==0.13
-pycrypto==2.6.1
-pycups==1.9.66
-pycurl==7.19.3
-pygobject==3.12.0
-pygpgme==0.3
-pyinotify==0.9.4
-pyserial==2.6
-pysmbc==1.0.14.1
-pysqlite==2.6.3
-python-apt==0.9.3.5
-python-dateutil==1.5
-python-debian==0.1.21-nmu2ubuntu2
-pywapi==0.3.6
-pyxdg==0.25
-reportlab==3.0
-requests==2.2.1
-rhythmbox-ubuntuone==13.10
-sessioninstaller==0.0.0
-simplejson==3.3.1
-six==1.5.2
-software-center-aptd-plugins==0.0.0
-ssh-import-id==3.21
-system-service==0.1.6
-ubuntuone-couch==0.3.0
-ubuntuone-storage-protocol==13.10
-unity-lens-photos==1.0
-urlgrabber==3.9.1
-urllib3==1.7.1
-virtkey==0.63.0
-virtualenv==1.11.6
-wadllib==1.3.2
+gunicorn==19.0.0
+itsdangerous==0.24
 wsgiref==0.1.2
-wxPython==2.8.12.1
-wxPython-common==2.8.12.1
-xdiagnose==3.6.3build2
-xkit==0.0.0
-yum-metadata-parser==1.1.4
-zope.interface==4.0.5
