--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Werkzeug==0.9.6
 argparse==1.2.1
 dj-static==0.0.6
 django-filter==0.7
+django-rest-swagger==0.1.14
 djangorestframework==2.3.14
 gunicorn==19.1.0
 itsdangerous==0.24
